[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysion"
version = "0.1"
authors = [
  { name="Bruno Reis", email="brunocbreis@gmail.com" },
]
description = "Package for creating code that's readable by DaVinci Resolve Fusion"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brunocbreis/pysion"
"Bug Tracker" = "https://github.com/brunocbreis/pysion/issues"