[metadata]
name = pysion
version = 0.1.1
author = Bruno Reis
description = "Package for creating code that's readable by DaVinci Resolve Fusion."
url = https://github.com/brunocbreis/pysion
keywords = davinci resolve, fusion

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10

[options.extras_require]
copy = pyperclip==1.8.2
