[metadata]
name = pysion
version = 0.1.2
author = Bruno Reis
description = Package for creating code that is readable by DaVinci Resolve Fusion.
url = https://github.com/brunocbreis/pysion
keywords = davinci resolve, fusion

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10

[options.extras_require]
copy = 
    pyperclip==1.8.2
testing = 
    pytest >=7.0
    pytest-cov >=4
    flake8 >=6.0.0

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
